--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="img/icon.png" type="image/x-icon" />
 
     <title>Refund</title>
   </head>
@@ -88,5 +89,6 @@
         </aside>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
